changed landing page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello World</title>
+    <title>Personal Landing Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+        }
+        header {
+            background: #333;
+            color: #fff;
+            padding: 1rem 0;
+            text-align: center;
+        }
+        section {
+            padding: 2rem;
+        }
+        .portfolio {
+            background: #f4f4f4;
+        }
+        footer {
+            background: #333;
+            color: #fff;
+            text-align: center;
+            padding: 1rem 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+        a {
+            color: #00f;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <header>
+        <h1>Welcome to My Landing Page</h1>
+        <p>Your one-stop destination to learn more about me!</p>
+    </header>
+    <section class="introduction">
+        <h2>About Me</h2>
+        <p>Hello! I'm [Your Name], a [Your Profession/Role]. I love [Your Interests or Hobbies].</p>
+    </section>
+    <section class="portfolio">
+        <h2>Portfolio</h2>
+        <p>Here are some of my recent projects:</p>
+        <ul>
+            <li><a href="#project1">Project 1</a></li>
+            <li><a href="#project2">Project 2</a></li>
+            <li><a href="#project3">Project 3</a></li>
+        </ul>
+    </section>
+    <section class="contact">
+        <h2>Contact Me</h2>
+        <p>Feel free to reach out via email at <a href="mailto:your.email@example.com">your.email@example.com</a>.</p>
+    </section>
+    <footer>
+        <p>&copy; 2023 [Your Name]. All rights reserved.</p>
+    </footer>
 </body>
 </html>
